--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </div>
 
 <div class="sharecontainer">
- <h4>Share</h4> 
+ <h4 class="sh">Share</h4> 
  <img class="icons" src="icon-facebook.svg" alt="Facebook">
  <img class="icons" src="icon-twitter.svg" alt="Twitter">
  <img class="icons" src="icon-pinterest.svg" alt="Pinterest">
